@@ -326,11 +326,11 @@ void EU3World::setupProvinces(provinceMapping& provinceMap)
 }
 
 
-void EU3World::convertCountries(countryMapping& countryMap)
+void EU3World::convertCountries(countryMapping& countryMap, const religionMapping& religionMap)
 {
 	for (countryMapping::iterator i = countryMap.begin(); i != countryMap.end(); i++)
 	{
-		i->second->convert(i->first);
+		i->second->convert(i->first, religionMap);
 		europeanCountries.push_back(i->second->getTag());
 	}
 
